<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailTanaman">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_tanaman"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_marginBottom="8dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:id="@+id/tv_nama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="8dp"
                        android:text="@string/nama_tanaman" />


                    <TextView
                        android:id="@+id/tv_latin_received"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/latin"
                        android:textSize="16sp" />

                </TableRow>
            </TableLayout>
        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:text="@string/warna" />
                <TextView
                    android:id="@+id/tv_warna_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/konten_warna" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/akar" />
                <TextView
                    android:id="@+id/tv_akar_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:text="@string/konten_akar" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/daun" />
                <TextView
                    android:id="@+id/tv_daun_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginBottom="8dp"
                    android:textSize="16sp"
                    android:text="@string/deskripsi_daun" />
            </TableRow>
        </TableLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manfaat"
        android:layout_marginLeft="8dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_manfaat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/detail_manfaat_received"
        android:justificationMode="inter_word"
        android:layout_marginLeft="8dp"
        android:textSize="18sp" />

    </LinearLayout>


</ScrollView>