<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:elevation="3dp"
    android:paddingTop="8dp"
    android:layout_margin="8dp"
    android:background="@color/grey"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:id="@+id/img_tanaman"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_marginBottom="8dp"
        tools:src="@tools:sample/avatars"
        android:scaleType="centerCrop"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"
                    android:text="@string/nama_tanaman" />


                <TextView
                    android:id="@+id/tv_latin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/latin"
                    android:textSize="18sp" />

        </TableRow>
    </TableLayout>
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp">

        <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         android:paddingRight="8dp"
                        android:textSize="16sp"
                        android:text="@string/warna" />
                    <TextView
                        android:id="@+id/tv_warna"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="@string/konten_warna" />
        </TableRow>

        <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/akar" />
                    <TextView
                        android:id="@+id/tv_akar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:text="@string/konten_akar" />
        </TableRow>

        <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/daun" />
                    <TextView
                        android:id="@+id/tv_daun"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        android:text="@string/deskripsi_daun" />
        </TableRow>
    </TableLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>